// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="css-pra96q"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg>
          circle-exclamation-mark.svg
        </svg>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="css-1pvpof3"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert should render as danger alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="css-ic0qlc"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg>
          circle-cross.svg
        </svg>
      </div>
      <span>
        Error
      </span>
    </div>
    <div
      class="css-6o9bco"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert should render as hint alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="css-1is67az"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg>
          circle-question-mark.svg
        </svg>
      </div>
      <span>
        Help
      </span>
    </div>
    <div
      class="css-2sxw2o"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert should render as info alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="css-1mvrtw8"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg>
          circle-info.svg
        </svg>
      </div>
      <span>
        Information
      </span>
    </div>
    <div
      class="css-16kimoc"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert should render as success alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="css-1dwg83m"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg>
          circle-check-mark.svg
        </svg>
      </div>
      <span>
        Success
      </span>
    </div>
    <div
      class="css-k5jr4t"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert should render as warning alert 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col overflow-hidden rounded-xl"
  >
    <div
      class="css-pra96q"
    >
      <div
        class="css-v0ob3f"
        height="16"
        width="16"
      >
        <svg>
          circle-exclamation-mark.svg
        </svg>
      </div>
      <span>
        Warning
      </span>
    </div>
    <div
      class="css-1pvpof3"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
